# caped-ai-oneat

./: $  .gitignore  .pre-commit-config.yaml  1  LICENSE  README.md  Untitled.ipynb  pyproject.toml  q  setup.cfg  setup.py  tox.ini  update_version.py  version.py
.github/workflows/: deploy.yml  test_and_deploy.yml
ColabPredictModel/.ipynb_checkpoints/: ColabDivisionDetection-checkpoint.ipynb
ColabTrainModel/: ColabCellDetectionTraining.ipynb
ColabTrainModel/.ipynb_checkpoints/: ColabBin2Train-checkpoint.ipynb  ColabWildTypeTrain-checkpoint.ipynb  MicroscopeTraining-checkpoint.ipynb
Demo/: Mitosis_hela_cells.ipynb  Mitosis_hela_cells_brightfield.ipynb  Mitosis_hela_cells_high_digitalphasecontrast.ipynb  Mitosis_xenopus_withoutsegmentation.ipynb
Demo/.ipynb_checkpoints/: Mitosis_hela_cells-checkpoint.ipynb  Mitosis_hela_cells_brightfield-checkpoint.ipynb
Demo/hela_example/: Cellsplitcategorieshelaflou.json  Cellsplitcordhelaflou.json  Cellsplitdetectorbrightfield.h5  Cellsplitdetectorbrightfield_Parameter.json  DivisionLocationbrightfield.csv
ErrorCorrection/: AngleMaker.ipynb  BinaryToIntegerLabel.ipynb  DownsampleMovie.ipynb
Notebooks/: Colab_best_focal_plane_detection.ipynb  Colab_cell_event_detection.ipynb  Colab_microscope_action_prediction.ipynb  Colab_segmentation_free_action_classification.ipynb  Colab_segmentation_free_action_classification_4D.ipynb  Colab_segmentation_with_action_classification_4D.ipynb  MIDOG_oneat_training_data_creator.ipynb  Segmentation_free_action_classification.ipynb  Segmentation_free_action_classification_4D.ipynb  Segmentation_free_dynamic_training_data_creator-4D.ipynb  Segmentation_free_dynamic_training_data_creator.ipynb  Segmentation_free_focus_training_data_maker.ipynb  Segmentation_free_static_training_data_creator.ipynb  Segmentation_with_action_classification_4D-Copy1.ipynb  Segmentation_with_action_classification_4D.ipynb  Segmentation_with_dynamic_training_data_creator-4D.ipynb  Segmentation_with_dynamic_training_data_creator.ipynb  Train_action_classification_model.ipynb  Train_focus_classification_model.ipynb  Training_data_maker.ipynb  Verify_nets.ipynb  VisualizeDetections-Napari-Static.ipynb  Visualize_action_classification_napari.ipynb  Visualize_seg_free_action_classification_napari.ipynb  Visualize_seg_with_action_classification_napari.ipynb  Visualize_static_classification_napari.ipynb  parasitic_training_data_creator.ipynb
PredictModel/: CellEventDetection.ipynb  ColabCellEventDetection.ipynb  DivisionDetection.ipynb  DynamicDetection.ipynb  MicroscopePrediction.ipynb  SynamicDetection.ipynb
Scripts/: Best_focal_plane_detection.py  Cell_event_detection.py  CelltypePM  CelltypeTM.py  Colab_best_focal_plane_detection.py  Colab_cell_event_detection.py  Colab_microscope_action_prediction.py  Colab_segmentation_free_action_classification.py  DynamicPM.py  DynamicTM.py  Dynamic_segPM.py  FocusPM.py  FocusTM.py  LivePM.py  Mari_genie.py  Mari_genie.sh  Mari_genie_gt.py  Mari_genie_sec.py  Microscope_action_prediction.py  README.md  Segmentation_free_action_classification.py  Segmentation_free_dynamic_training_data_creator.py  Segmentation_free_focus_training_data_maker.py  Segmentation_free_static_training_data_creator.py  Segmentation_with_action_classification.py  Segmentation_with_action_classification_4D.py  Segmentation_with_dynamic_training_data_creator.py  Segmentation_with_static_training_data_creator.py  TrackMate-Oneat.py  Tracking_challenge.py  Train_focus_classification_model.py  Train_static_class_only_classification_model.py  Train_static_classification_model.py  Train_static_lstm_classification_model.py  Train_xenopus_oneat.py  Visualize_action_classification_napari.py  Visualize_seg_with_action_classification_napari.py  Visualize_static_classification_napari.py  VollSeg_predict_directory.py  VollSeg_predict_directory_second.py  (+42 more)
TrainModel/: CreateDynamicTD-Copy1.ipynb  CreateDynamicTD.ipynb  CreateFocalTD.ipynb  CreateStaticTD.ipynb  FocusTM.ipynb  StaticTM.ipynb
images/: modified_densenet.dot
licenses/: MIT
oneat/: __init__.py  _version.py  pretrained.py  version.py
oneat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+158 files in other folders)
