[metadata]
name = caped-ai-visualizations-napari

description = Oneat stands for Open Network for Event as Action Topology detection and prediction.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/CAPED-AI-oneat/
author = Varun Kapoor
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/CAPED-AI-oneat/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/CAPED-AI-oneat#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/CAPED-AI-oneat
    User Support = https://github.com/Kapoorlabs-CAPED/CAPED-AI-oneat/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    pandas
    vollseg-napari
    scipy
    tifffile
    matplotlib
    imagecodecs
    napari[all]
    diplib
    sklearn
    dask
    natsort
    napari-animation
    pydot
    graphviz
    oneat-augmentations
    hydra-core

python_requires = >=3.8
include_package_data = True
package_dir =
    = oneat
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = oneat

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml