[metadata]
name = oneat

description = Action classification for TZYX/TYX shaped images, Static classification for TYX/YX shaped images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kapoorlabs-CAPED/oneat
author = Varun Kapoor
author_email = randomaccessiblekapoor@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Kapoorlabs-CAPED/oneat/issues
    Documentation = https://github.com/Kapoorlabs-CAPED/oneat#README.md
    Source Code = https://github.com/Kapoorlabs-CAPED/oneat
    User Support = https://github.com/Kapoorlabs-CAPED/oneat/issues

[options]
packages = find:
install_requires =
        pandas
        vollseg-napari
        scipy
        tifffile
        matplotlib
        imagecodecs
        napari[all]
        
        scikit-learn
        dask
        natsort
        napari-animation
        pydot
        graphviz
        oneat-augmentations
        hydra-core
        caped-ai-metrics
        seaborn

python_requires = >=3.8
include_package_data = True
package_dir =
    = src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
caped.manifest =
    oneat = oneat:caped.yaml

[options.extras_require]
testing =
    tox
    oneat    
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
